# retail-analytics

./: pyproject.toml
American_Retail_Sales/: Makefile  README.md  requirements.txt  setup.py
American_Retail_Sales/Model_Serving/: Dockerfile  requirements.txt
American_Retail_Sales/Model_Serving/Models/LightGBM/: 1_model_group_1.joblib  1_model_group_2.joblib
American_Retail_Sales/Model_Serving/Models/forecasting/: arima_pipeline.joblib
American_Retail_Sales/Model_Serving/Models/predictive/: model_group_1.joblib  model_group_2.joblib  model_group_3.joblib
American_Retail_Sales/Model_Serving/app/: main.py
American_Retail_Sales/docs/: Makefile  conf.py  index.rst  make.bat
American_Retail_Sales/models/LightGBM/: 1_model_group_3.joblib  model_group_1.joblib  model_group_3.joblib
American_Retail_Sales/models/XGBoost/: model_group_1.joblib  model_group_2.joblib  model_group_3.joblib
American_Retail_Sales/models/forecasting/: sarima_pipeline.joblib
American_Retail_Sales/models/predictive/: model_group_2.joblib
American_Retail_Sales/notebooks/: Experiment.ipynb  ExperimentForForecasting.ipynb  ExperimentForPredictiveAnalysis.ipynb  data_merge.ipynb
American_Retail_Sales/notebooks/Forecasting/: Das-Kiran-24580348-Arima.ipynb  Das-Kiran-24580348-Sarima.ipynb  Untitled.ipynb
American_Retail_Sales/notebooks/Predictive/: Das-Kiran-24580348-LGMBoost.ipynb  Das-Kiran-24580348-LightGBM.ipynb
American_Retail_Sales/src/data/: make_dataset.py
American_Retail_Sales/src/models/: forecast_predict_model.py  forecast_predict_model_hyperparam.py  predictivemodel.py
(+2 files in other folders)
